ajuste das imagens e menu

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <nav class="menu">
             <a href="#">frames</a>
             <a href="#">lenses</a>
+            <a href="#">pricing</a>
             <a href="#">reviews</a>
             <a href="#">locations</a>
         </nav>
@@ -62,14 +63,22 @@
         </section>
 
         <section class="main-three">
-            <div class="img1"><img src="images/m3-img1.png" alt="People with Sunglasses"></div>
+            <div class="img1">
+            <picture>
+                <source media="(max-width: 600px)" srcset="images/m3-img1-pq.png">
+                <img src="images/m3-img1.png" alt="People with Sunglasses">
+            </picture></div>
             <div class="colum2">
                 <div class="text-section3">
                     <h1>Designed by you</h1>
                     <h2>Individual style</h2>
                     <p>Like a bespoke suit or couture dress, exeptional style starts with fit that was made just for you. We craft your glasses based to your distinct stylistic choices and your personal preferences, so you're free to truly express yourself.</p>
                 </div>
-                <div class="img2"><img src="images/m3-img2.png" alt="Peoples with Sunglasses"></div>
+                <div class="img2">
+                <picture>
+                    <source media="(max-width: 600px)" srcset="images/m3-img2-pq.png">
+                    <img src="images/m3-img2.png" alt="Peoples with Sunglasses">
+                </picture></div>
             </div>
         </section>
 
